--- a/Cpp_00/ex01/Makefile
+++ b/Cpp_00/ex01/Makefile
@@ -1,17 +1,17 @@
-CPP = g++ 
+CPP = c++ 
 
 CPPFLAGS =  -Wall -Wextra -Werror -std=c++98
 
 NAME = phonebook
 
-SRCS = phonebook.cpp
+SRCS = main.cpp phonebook.cpp
 
-OBJS = $(SRCS : .cpp=.o)
+OBJS = $(SRCS: .cpp=.o)
 
 all : $(NAME)
 
-NAME : $(OBJS)
-	$(CPP) $(CPPFLAGS) -o $(NAME) $(OBJS)
+$(NAME) : $(OBJS)
+	$(CPP) $(CPPFLAGS) $(OBJS) -o $(NAME)
 
 %.o : %.cpp
 	$(CPP) $(CPPFLAGS) -c $> -o $@
